--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     id="files-card">
     <div class="card-body">
       <div class="card-title">visual works</div>
-      <div class="card-subtitle text-neutral">Select a file to run. Pause button is at the upper left.</div>
+      <div class="card-subtitle">Select a file to run. Pause button is at the upper left.</div>
       <div class="overflow-x-auto rounded-box shadow-lg">
         <table class="table table-pin-rows w-full" id="files-table">
           <thead class="border-b-0">
@@ -45,7 +45,7 @@
           <tbody></tbody>
         </table>
       </div>
-      <div class="card-actions justify-end">
+      <div class="card-actions justify-end" id="card-actions">
         <div class="text-neutral-content self-center" id="p5_loading">
           <svg class="animate-spin -ml-1 mr-3 h-5 w-5 inline text-neutral-content" xmlns="http://www.w3.org/2000/svg"
             fill="none" viewBox="0 0 24 24">
